src/tests/testfiles/function-calls/parameter-type-13.txt
Error at 27:5: Format 'f' expects argument of type 'float', but argument 3 has type 'int'
printf("test %c, %f \n", d, a);
^
Error at 28:5: Format 'c' expects argument of type 'char', but argument 2 has type 'float'
printf("test %c, %5f \n", h,  h);
^
Error at 29:5: Format 'i' expects argument of type 'int', but argument 3 has type 'char'
printf("test %c, %i, %7f \n", e, e, h);
^
Error at 30:5: Format 'd' expects argument of type 'int', but argument 2 has type 'char'
printf("test %37d, %c, %i, %5f \n", sumc(d, e), sumc(d, 'd'), a, sumf(1.0, h));
^
Error at 31:5: Format 'c' expects argument of type 'char', but argument 3 has type 'int'
printf("test %37d, %c, %i, %5f, %7s \n", a, sum(1, b), b, h, f);
^
Error at 32:5: Format 's' expects argument of type 'char []', but argument 3 has type 'float'
printf("%c%s%f%i%d%f%i%c%s \n", 'h', sumf(c, h), b, b, h, sums(f, f), sum(a, b), f, sums("hello", i));
^
Error at 32:5: Format 'f' expects argument of type 'float', but argument 4 has type 'int'
printf("%c%s%f%i%d%f%i%c%s \n", 'h', sumf(c, h), b, b, h, sums(f, f), sum(a, b), f, sums("hello", i));
^
Error at 32:5: Format 'd' expects argument of type 'int', but argument 6 has type 'float'
printf("%c%s%f%i%d%f%i%c%s \n", 'h', sumf(c, h), b, b, h, sums(f, f), sum(a, b), f, sums("hello", i));
^
Error at 32:5: Format 'f' expects argument of type 'float', but argument 7 has type 'char *'
printf("%c%s%f%i%d%f%i%c%s \n", 'h', sumf(c, h), b, b, h, sums(f, f), sum(a, b), f, sums("hello", i));
^
Error at 32:5: Format 'c' expects argument of type 'char', but argument 9 has type 'char *'
printf("%c%s%f%i%d%f%i%c%s \n", 'h', sumf(c, h), b, b, h, sums(f, f), sum(a, b), f, sums("hello", i));
^
